<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivBundeligaLogo"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bundesliga_logo" />

                <TextView
                    android:id="@+id/tvHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/myfont"
                    android:text="@string/bundesliga"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_25ssp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivSearch"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_search" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvWillkommen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/myfont"
                android:text="@string/willkommen"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/linearHeader"
                app:layout_constraintTop_toBottomOf="@id/linearHeader" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLatestResults"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWillkommen">

                <ImageView
                    android:id="@+id/ivLatestResults"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:background="@color/accent" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvAboutLeague"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:text="@string/about_league"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tvWillkommen"
                app:layout_constraintTop_toBottomOf="@id/cvLatestResults" />

            <TextView
                android:id="@+id/tvLeagueInfo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:fontFamily="@font/myfont"
                android:gravity="center"
                android:text="@string/league_description"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/cvLeagueImage"
                app:layout_constraintEnd_toEndOf="@id/linearHeader"
                app:layout_constraintStart_toStartOf="@id/linearHeader"
                app:layout_constraintTop_toBottomOf="@id/tvAboutLeague" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLeagueImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLeagueInfo"
                app:layout_constraintBottom_toTopOf="@id/tvMoreInfo">

                <ImageView
                    android:id="@+id/ivLeagueInfo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bundesliga_info" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvMoreInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/myfont"
                android:gravity="center"
                android:text="@string/more_info"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>